# verona

./: .gitignore  .gitmodules
docs/internal/: op-sem.md
experiments/llvm_sandboxing/: CMakeLists.txt  notes.md  test.h
experiments/llvm_sandboxing/dispatch_test/: cmd  includes.txt  main.cc  targets.txt
experiments/llvm_sandboxing/test1/: cmd  cmd2  includes.txt  test.cc  test.h
experiments/llvm_sandboxing/test2/: cmd  cmd2  includes.txt  main.cc
experiments/llvm_sandboxing/test3/: cmd  includes.txt  main.cc
experiments/llvm_sandboxing/test4/: cmd  dump.txt  main.cc
experiments/opsem/: cmd  cmd_interop
experiments/opsem/sandbox_configs/: config1.txt  sandbox1_config.txt
experiments/opsem/sandboxes/sandbox1/: main.cc
experiments/opsem/tests/: lexer.txt  prog.txt  prog3.txt  sandbox.txt  typetest_lookup.txt  unsafe.txt
experiments/process_sandbox/include/process_sandbox/: cxxsandbox.h  sandbox.h
experiments/wasm_sandbox/: CMakeLists.txt
experiments/wasm_sandbox/include/wasm_sandbox/backend/: allocator.h
experiments/wasm_sandbox/include/wasm_sandbox/wasm/: snmalloc_embeddings.h  wasmsandbox.h
experiments/wasm_sandbox/src/: libwasmsandbox.cc
src/: CMakeLists.txt
src/interop/: ASTinstr.cc  ASTinstr.h  CMakeLists.txt  CXXBuilder.h  CXXQuery.h  Compiler.h  IRinstr.cc  IRinstr.h  InteropApi.cc  ObjGen.cc  ObjGen.h  aghosn.h  instrumentation.h  verona-interop.cc
src/interop/include/: ASTinstr.h  CXXBuilder.h  CXXQuery.h  Compiler.h  IRinstr.h  Interop.h  InteropApi.h
src/interop/src/: ASTinstr.cc  IRinstr.cc  InteropApi.cc  ObjGen.cc
src/interpreter/: CMakeLists.txt  helpers.cc  helpers.h  interpreter.cc  interpreter.h  ir.cc  ir.h  lexer.cc  lexer.h  main.cc  notation.cc  notation.h  object.h  parser.cc  parser.h  rules.cc  rules.h  state.h  verona-interpreter.cc  visitors.cc  visitors.h
src/opsem-interpreter/: CMakeLists.txt  error.h  helpers.cc  helpers.h  interoperability.cc  interoperability.h  interpreter.cc  interpreter.h  ir.cc  ir.h  lexer.cc  lexer.h  main.cc  notation.cc  notation.h  notes.md  object.cc  object.h  parser.cc  parser.h  state.h  tags  type.h  utils.h  visitors.cc  visitors.h
src/opsem-interpreter/tests/: prog.txt  prog2.txt
src/rt/: CMakeLists.txt  README.md  verona.h
src/rt/cpp/: cown.h  lambdabehaviour.h  promise.h  vbehaviour.h  vobject.h  when.h
src/rt/object/: object.h
src/rt/pal/: semaphore.h  sysmonitor.h  threadpoolbuilder.h
src/rt/sched/: base_noticeboard.h  behaviour.h  behaviour_stack.h  core.h  corepool.h  cown.h  mpmcq.h  noticeboard.h  preempt.h  preempt_state.h  preempted_behaviour.h  runtime.h  runtimecall.h  schedulerthread.h  stack.h  sysmonitor.h  threadpool.h  threadstate.h  threadsync.h  workerthread.h
src/rt/sched2/: core.h  corepool.h  cown.h  runtime.h  schedulerthread.h  threadpool.h  threadpoolbuilder.h
src/rt/test/: harness.h  logging.h
src/rt/test/func/ext_ref/: ext_ref_basic.h
src/rt/test/func/external_threading/: main.cc
src/rt/test/func/fair_variance/: fair_variance.cc
src/rt/test/func/multimessage/: multimessage.cc
src/rt/test/func/sched2/: sched2.cc  sched2.h
src/rt/test/perf/backpressure1/: backpressure1.cc
src/rt/test/perf/backpressure2/: backpressure2.cc
src/rt/test/perf/backpressure3/: backpressure3.cc
src/rt/test/perf/schedule/: schedule.cc
src/rt/test/perf/ubench/: ubench.cc
src/rt/test/preempt/interrupt/: verona_interrupt.cc
src/rt/test/preempt/long_running/: verona_long_running.cc
src/rt/test/preempt/non_interrupt/: verona_non_interrupt.cc
src/rt/test/preempt/preemptable/: verona_preemptable.cc
